# diffalign

./: .gitignore  Cargo.toml  README.md  build.rs  results_format.md
cuda/: diffalign_cuda.h  host.cu  kernel.cu
src/: cli.rs  config.rs  key_listener.rs  lib.rs  main.rs  pause.rs  progress.rs
src/analysis/: analyzer.rs  cuda_align.rs  fasta.rs  iupac.rs  mod.rs  pairwise.rs  screener.rs  simd_align.rs  simple_align.rs  types.rs
src/analysis/simplescreen/: bitap.rs  bitap_simd.rs  iupac.rs  mod.rs  pattern.rs  screener.rs
