[package]
name = "diffalign"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "diffalign"
path = "src/lib.rs"

[[bin]]
name = "diffalign"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bio = "2"
rayon = "1.10"
once_cell = "1.20"
mimalloc = "0.1"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rust-ini = "0.21"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
